// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <GifExpertApp /> must be right generated html 1`] = `
<div
  className="container"
>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</div>
`;

exports[`tests for <GifExpertApp /> should show a list of categories 1`] = `
<div
  className="container"
>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="One Punch"
    key="One Punch"
  />
  <GifGrid
    category="Dragon Ball"
    key="Dragon Ball"
  />
  <GifGrid
    category="Demon Slayer"
    key="Demon Slayer"
  />
</div>
`;
